--- a/cuenta/templates/cuenta/cuentaCreate.html
+++ b/cuenta/templates/cuenta/cuentaCreate.html
@@ -1,5 +1,5 @@
 <!-- estudiante/estadoCuentaCreate.html -->
-<h1>Agregar Estado de Cuenta</h1>
+<h1>Agregar Cuenta</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
