--- a/cuenta/templates/cuenta/cuentas.html
+++ b/cuenta/templates/cuenta/cuentas.html
@@ -6,7 +6,7 @@
         <th>Saldo</th>
         <th>Fecha de Actualización</th>
     </tr>
-    {% for estado in estado_cuenta_list %}
+    {% for estado in cuenta_list %}
     <tr>
         <td>{{ estado.estudiante.nombre }} {{ estado.estudiante.apellido }}</td>
         <td>{{ estado.saldo }}</td>
