--- a/manejador_de_pagos/templates/manejador_de_pagos/pago_create.html
+++ b/manejador_de_pagos/templates/manejador_de_pagos/pago_create.html
@@ -1,7 +1,5 @@
 <!-- manejador_de_pagos/templates/manejador_de_pagos/pago_create.html -->
-{% extends "base.html" %}
-
-{% block content %}
+<h1>Crear Pago</h1>
   <h2>Registrar Pago</h2>
 
   {% if codigo_form %}
@@ -23,6 +21,5 @@
       <button type="submit" class="btn btn-primary">Registrar Pago</button>
     </form>
   {% endif %}
-{% endblock %}
 
 
