--- a/manejador_integraciones_contables/manejador_de_pagos/templates/manejador_de_pagos/pago_list.html
+++ b/manejador_integraciones_contables/manejador_de_pagos/templates/manejador_de_pagos/pago_list.html
@@ -28,11 +28,11 @@
     </tbody>
 </table>
 
-<a href="{% url 'api_reportes' %}" class="btn btn-primary">
+<a href="{% url 'reportes' %}" class="btn btn-primary">
     Generar Reporte Pagos
 </a>
 
-<a href="{% url 'api_reportes_locales' %}" class="btn btn-primary">
+<a href="{% url 'reportes' %}" class="btn btn-primary">
     Generar Reporte Pagos Con Datos Locales
 </a>
 
